// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> CustomColor story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="#928CFF"
  height="2em"
  style="--icon-size: 2em;"
  width="2em"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="test-file-stub#close"
  />
</svg>
`;

exports[`<Icon /> Default story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="test-file-stub#close"
  />
</svg>
`;

exports[`<Icon /> FullScreen story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  height="100vh"
  style="--icon-size: 100vh;"
  width="100vh"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="test-file-stub#close"
  />
</svg>
`;

exports[`<Icon /> IconGrid story renders snapshot 1`] = `
<div>
  <ul
    class="icon-grid"
  >
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#account-circle"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        account-circle
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#add-alarm"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        add-alarm
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#add-circle"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        add-circle
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#add-comment"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        add-comment
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#add"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        add
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#alarm"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        alarm
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#arrow-back"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        arrow-back
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#arrow-downward"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        arrow-downward
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#arrow-forward"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        arrow-forward
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#arrow-upward"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        arrow-upward
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#assessment"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        assessment
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#assignment-late"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        assignment-late
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#assignment-turned-in"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        assignment-turned-in
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#assignment"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        assignment
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#attachment"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        attachment
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#autorenew"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        autorenew
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#book"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        book
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#bookmark"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        bookmark
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#campaign"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        campaign
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#cancel"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        cancel
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#category"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        category
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#check-circle"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        check-circle
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#check"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        check
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#chevron-left"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        chevron-left
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#chevron-right"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        chevron-right
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#circle"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        circle
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#close"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        close
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#cloud-done"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        cloud-done
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#create-new-folder"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        create-new-folder
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#create"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        create
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#dangerous"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        dangerous
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#delete"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        delete
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#description"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        description
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#drag-indicator"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        drag-indicator
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#error"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        error
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#event-available"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        event-available
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#event-busy"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        event-busy
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#event-note"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        event-note
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#event"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        event
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#expand-less"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        expand-less
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#expand-more"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        expand-more
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#face"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        face
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#favorite"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        favorite
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#feedback"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        feedback
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#file-copy"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        file-copy
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#filter-list"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        filter-list
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#flag"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        flag
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#folder"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        folder
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#forum"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        forum
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#gesture"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        gesture
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#help"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        help
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#home"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        home
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#info"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        info
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#insert-drive-file"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        insert-drive-file
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#library-books"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        library-books
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#link"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        link
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#local-library"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        local-library
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#lock-open"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        lock-open
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#lock"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        lock
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#map"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        map
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#menu-book"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        menu-book
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#mic"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        mic
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#mood"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        mood
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#more-vert"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        more-vert
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#notifications"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        notifications
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#ondemand-video"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        ondemand-video
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#open-in-new"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        open-in-new
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#people"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        people
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#person-add"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        person-add
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#play-arrow"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        play-arrow
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#print"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        print
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#question-answer"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        question-answer
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#record-voice-over"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        record-voice-over
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#remove"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        remove
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#schedule"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        schedule
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#school"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        school
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#search"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        search
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#sentiment-dissatisfied"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        sentiment-dissatisfied
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#sentiment-satisfied"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        sentiment-satisfied
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#sentiment-very-satisfied"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        sentiment-very-satisfied
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#settings-voice"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        settings-voice
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#settings"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        settings
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#spa"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        spa
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#star-circle"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        star-circle
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#star"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        star
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#supervised-user-circle"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        supervised-user-circle
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#swap-vert"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        swap-vert
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#thumb-down"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        thumb-down
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#thumb-up"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        thumb-up
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#timeline"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        timeline
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#timer-off"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        timer-off
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#timer"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        timer
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#trending-up"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        trending-up
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#unfold-more"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        unfold-more
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#view-day"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        view-day
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#view-headline"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        view-headline
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#view-module"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        view-module
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#warning"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        warning
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Icon /> InText story renders snapshot 1`] = `
<p
  class="text text--body"
>
  The svg icon defaults to the surrounding text size (
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="6"
    >
      icon with 1em line height
    </title>
    <use
      xlink:href="test-file-stub#account-circle"
    />
  </svg>
  ; 1em), but often looks better with the line height (
  <svg
    class="icon"
    fill="currentColor"
    height="2em"
    role="img"
    style="--icon-size: 2em;"
    width="2em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="7"
    >
      icon with 2em line height
    </title>
    <use
      xlink:href="test-file-stub#account-circle"
    />
  </svg>
  ; 2em) which is harder to determine. Take a look at the icons available in
   
  <a
    href="https://material-ui.com/components/material-icons/"
    rel="noreferrer"
    target="_blank"
  >
    https://material-ui.com/components/material-icons/
  </a>
  , currently we only support the filled icons.
</p>
`;

exports[`<Icon /> Large story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  height="4em"
  style="--icon-size: 4em;"
  width="4em"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="test-file-stub#close"
  />
</svg>
`;

exports[`<Icon /> Medium story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  height="2em"
  style="--icon-size: 2em;"
  width="2em"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="test-file-stub#close"
  />
</svg>
`;

exports[`<Icon /> WithChildrenSvg story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M11.6144 8.96051C12.2524 7.61848 13.9514 4.56304 14.905 3C15.5557 3.28671 16.1844 3.61871 16.7863 3.99342C15.9964 5.50177 14.2272 8.6643 13.5144 9.87646C14.7414 9.45266 18.4783 8.3362 20.1657 7.89646C20.4765 8.60506 20.8294 9.55291 21 10.0815C19.0439 10.5737 15.0872 11.5078 13.699 11.8109C15.335 12.2848 17.9431 13.0914 19.8642 13.7408C19.6118 14.2352 19.0345 15.2354 18.6209 15.9122C17.034 15.3311 15.0639 14.5451 13.4794 13.8934C13.9 14.3491 16.8143 17.8329 17.5178 18.7147C17.1322 19.2023 16.4217 20.0157 15.9566 20.5101C14.6058 18.7876 13.1522 16.819 12.0047 15.2149C12.0911 16.0785 12.3412 19.4119 12.43 20.8701C11.764 20.9339 10.8455 20.9841 10.093 21C10.0345 18.7739 10.0065 16.9648 10.0088 15.7253C9.39652 16.6367 7.40068 19.4734 6.97066 20.0544C6.58504 19.7263 5.80213 18.9152 5.48429 18.5985C6.41911 17.2975 8.24201 14.9939 9.14412 13.8957C8.24435 14.1965 4.57518 15.3266 3.53519 15.6046C3.35991 15.0418 3.11685 14.1076 3 13.5334C4.11945 13.2395 7.56661 12.4352 8.98987 12.1322C8.04103 11.5603 5.13607 9.68506 3.88574 8.81013C4.35316 8.17671 4.91872 7.48633 5.43521 6.88481C6.44015 7.60709 8.7772 9.32734 9.5718 9.92203C9.00857 7.9238 8.57388 5.88 8.13918 3.57646C8.9025 3.38437 9.67878 3.24503 10.4622 3.15949C10.6679 4.05949 11.4298 8.09468 11.6144 8.96051Z"
  />
</svg>
`;
